# pay-api

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  001_initial.py  002_outbox_claimed_at.py  003_webhook_outbox.py  004_rename_payment_outbox.py  005_dead_letters.py
src/: config.py  consumer_main.py
src/api/: app.py  auth.py  deps.py  schemas.py
src/api/routes/: payments.py
src/app/: config.py  consumer_main.py
src/app/api/: app.py  auth.py  deps.py  schemas.py
src/app/api/routes/: payments.py
src/app/application/: payment_service.py  ports.py
src/app/domain/: entities.py
src/app/infrastructure/database/: models.py  repositories.py  session.py
src/app/infrastructure/messaging/: broker.py  consumer.py  processor.py  publisher.py
src/app/infrastructure/outbox/: relay.py
src/app/infrastructure/webhooks/: client.py
src/application/: payment_service.py  repo.py  schemas.py
src/domain/: entities.py
src/infrastructure/database/: models.py  repositories.py  session.py
src/infrastructure/messaging/: broker.py  consumer.py  dead_letter.py  exceptions.py  processor.py  publisher.py
src/infrastructure/outbox/: relay.py
src/infrastructure/webhooks/: client.py  relay.py  schemas.py
tests/: test_payment_service.py
